--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "vue-cli-service lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^1.19.1",
+    "sass": "^1.32.8",
     "vue": "^3.0.0"
   },
   "devDependencies": {
