--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 	},
 	"main": "main.js",
 	"dependencies": {
+		"@vue/cli": "^4.5.12",
 		"axios": "^0.21.1",
 		"core-js": "^3.6.5",
+		"node": "^15.12.0",
+		"npm": "^7.9.0",
 		"sass": "^1.32.8",
 		"vue": "^3.0.0"
 	},
