--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"vue": "^3.0.0"
 	},
 	"devDependencies": {
+		"@hapi/bourne": "^1.3.2",
+		"@hapi/topo": "^3.1.6",
 		"@vue/cli-plugin-babel": "~4.5.0",
 		"@vue/cli-plugin-eslint": "~4.5.0",
 		"@vue/cli-service": "^4.5.12",
