--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "sh deploy.sh"
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "main": "main.js",
   "dependencies": {
@@ -30,7 +30,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "execa": "^1.0.0"
   },
   "eslintConfig": {
     "root": true,
